// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Login component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Welcome logo"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Back"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Back"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Sign in
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Use e-mail and password used
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          when you created your account
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="login-label"
            for="textfield-login"
            id="textfield-login-label"
          >
            Username/e-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="login"
              id="textfield-login"
              maxlength="100"
              placeholder="Enter your username or email"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Username/e-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="password-label"
            for="textfield-password"
            id="textfield-password-label"
          >
            Password
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="password"
              id="textfield-password"
              maxlength="100"
              placeholder="Enter your password"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Password
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-testid="submit-button"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Sign in
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <button
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiLink-button MuiTypography-subtitle2 MuiTypography-colorPrimary"
          type="button"
        >
          Forgot your password?
        </button>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
        >
          Don't have an account?
           
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
            href="/front/register"
          >
            Create account
          </a>
        </p>
      </form>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Created
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Version
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Portuguese"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Portuguese"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Brasil flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="English"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="English"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="United Kingdom flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Spanish"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Spanish"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Spain flag"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`testing Login component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Logotipo de bem-vindo"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Voltar"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Voltar"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Logar
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Digite o e-mail e senha usados
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          quando você criou sua conta
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="login-label"
            for="textfield-login"
            id="textfield-login-label"
          >
            Nome de usuário/e-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="login"
              id="textfield-login"
              maxlength="100"
              placeholder="Digite o nome ou e-mail"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Nome de usuário/e-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="password-label"
            for="textfield-password"
            id="textfield-password-label"
          >
            Senha
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="password"
              id="textfield-password"
              maxlength="100"
              placeholder="Digite sua senha"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Senha
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-testid="submit-button"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Logar
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <button
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiLink-button MuiTypography-subtitle2 MuiTypography-colorPrimary"
          type="button"
        >
          Esqueceu sua senha?
        </button>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
        >
          Não tem uma conta?
           
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
            href="/front/register"
          >
            Criar conta
          </a>
        </p>
      </form>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Criado
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Versão
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Português"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Português"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira do Brasil"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Inglês"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="Inglês"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira do Reino Unido"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Espanhol"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Espanhol"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandeira da Espanha"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`testing Login component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthXs"
  >
    <img
      alt="Logotipo de Bienvenido"
      class="img-root img-root"
      src=""
    />
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <a
          aria-disabled="false"
          aria-label="Volver"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          href="/front"
          role="button"
          tabindex="0"
          title="Volver"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <h6
          class="MuiTypography-root Component-root Component-root MuiTypography-h6 MuiTypography-alignCenter"
        >
          Iniciar sesión
        </h6>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          Utilice el e-mail y la contraseña
        </p>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          utilizada cuando creaste tu cuenta
        </p>
      </div>
      <form
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="login-label"
            for="textfield-login"
            id="textfield-login-label"
          >
            Nombre de usuario/e-mail
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="login"
              id="textfield-login"
              maxlength="100"
              placeholder="Ingrese el nombre o e-mail"
              required=""
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Nombre de usuario/e-mail
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
            data-shrink="true"
            data-testid="password-label"
            for="textfield-password"
            id="textfield-password-label"
          >
            Contraseña
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="password"
              id="textfield-password"
              maxlength="100"
              placeholder="Ingresa tu contraseña"
              required=""
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Contraseña
                   *
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-testid="submit-button"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Iniciar sesión
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <button
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiLink-button MuiTypography-subtitle2 MuiTypography-colorPrimary"
          type="button"
        >
          ¿Olvidaste tu contraseña?
        </button>
        <p
          class="MuiTypography-root Component-root Component-root MuiTypography-body2 MuiTypography-alignCenter"
        >
          ¿No tienes una cuenta?
           
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
            href="/front/register"
          >
            Crear cuenta
          </a>
        </p>
      </form>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Creado
       
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
        href="https://autoseg.com"
      >
        @AutoSeg
      </a>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body2"
    >
      Versión
       1.0.0
    </p>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <button
        aria-label="Portugués"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-portuguese"
        tabindex="0"
        title="Portugués"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera de Brasil"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Inglés"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-english"
        tabindex="0"
        title="Inglés"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera del Reino Unido"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Español"
        class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
        data-testid="change-language-spanish"
        tabindex="0"
        title="Español"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <img
            alt="Bandera de España"
            class="img-root img-root"
            src=""
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
